<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>app.cleancode</groupId>
  <artifactId>win32-bindings</artifactId>
  <version>0.0.1</version>
  <properties>
  <java.version>19</java.version>
  <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
  </properties>
  <build>
  <plugins>
  <plugin>
  <groupId>org.apache.maven.plugins</groupId>
  <artifactId>maven-compiler-plugin</artifactId>
  <version>3.10.0</version>
  <configuration>
  <target>${java.version}</target>
  <source>${java.version}</source>
  <release>${java.version}</release>
  <compilerArgs>--enable-preview</compilerArgs>
  </configuration>
  </plugin>
  </plugins>
  </build>
</project>